# SQL-HH

./: .gitignore  config.py  main.py  pyproject.toml
src/: abstract_api.py  abstract_classes.py  db_manager.py  hh_api.py  utils.py
